--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     padding: 20px;
   }
 </style>
-<link rel="shortcut icon" type="image/png" href="https://i.imgur.com/9KP46NF.png">
+<link rel="shortcut icon" type="image/png" href="nessaj_logo.png">
 <title>Mobilbarát Menetrend</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="mobile-web-app-capable" content="yes">
